// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeItem new item 1`] = `
Object {
  "id": Any<String>,
  "position": 1,
  "source": "",
  "tweet": "1/1 #prodmgmt",
}
`;

exports[`makeItem update item 1`] = `
Object {
  "id": Any<String>,
  "position": 1,
  "source": "Lorem ipsum dolor sit amet",
  "tweet": "1/2 Lorem ipsum dolor sit amet #prodmgmt",
}
`;
